--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,24 @@ h3 {
     background-image: url(/assets/images/what-the-hex-dark.png);
     background-repeat: repeat;
 }
+
+
+.img-wrapper {
+    position: relative;
+    margin: 0 auto;
+}
+
+.img-responsive {
+    width: 100%;
+    height: auto;
+}
+
+
+.crystalButton {
+    border-style: solid;
+    border-width: 6px;
+    border-color: yellow;
+    /* height: 250px;
+    width: 250px; */
+    margin: 10px;
+}
