--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-heg adin {
+heading {
     border-width: 5px;
     border-style: solid;
     border-color: darkred;
@@ -20,6 +20,10 @@ body {
 h2 {
     font-size: 2.5rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+}
+
+#cyrstalMenu {
     text-align: center;
 }
 
@@ -57,17 +61,15 @@ h3 {
     margin-bottom: 10px
 }
 
-
 .img-wrapper {
     position: relative;
     margin: 0 auto 10 0;
 }
 
 .img-responsive {
-    width: 100%;
+    width: 50%;
     height: auto;
 }
-
 
 .crystalButton {
     border-style: solid;
